--- a/BikeSharing/Map/BikeInfoView.xib
+++ b/BikeSharing/Map/BikeInfoView.xib
@@ -11,7 +11,12 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BikeInfoView" customModule="BikeSharing" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BikeInfoView" customModule="BikeSharing" customModuleProvider="target">
+            <connections>
+                <outlet property="routeButton" destination="9D5-IM-9wX" id="1G6-XZ-inp"/>
+                <outlet property="scanButton" destination="Eyu-0a-xH4" id="ICb-2Z-4rk"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="320" height="170"/>
@@ -36,6 +41,9 @@
                             </fragment>
                         </attributedString>
                     </state>
+                    <connections>
+                        <action selector="scan:" destination="-1" eventType="touchUpInside" id="ROm-z9-ZbL"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9D5-IM-9wX" customClass="BSButton" customModule="BikeSharing" customModuleProvider="target">
                     <rect key="frame" x="192" y="106" width="97" height="48"/>
@@ -54,8 +62,8 @@
                         </attributedString>
                     </state>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q7X-Xe-SSd">
-                    <rect key="frame" x="71" y="52" width="42" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Баклавский проспект, д. 16" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q7X-Xe-SSd">
+                    <rect key="frame" x="71" y="52" width="218.5" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
