--- a/BikeSharing/Base.lproj/Main.storyboard
+++ b/BikeSharing/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -33,7 +34,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bike Sharing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6eD-Dh-m6e">
-                                <rect key="frame" x="93" y="172" width="229" height="52"/>
+                                <rect key="frame" x="92.5" y="172" width="229" height="52"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="43"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -109,5 +110,131 @@
             </objects>
             <point key="canvasLocation" x="1641" y="127"/>
         </scene>
+        <!--Ride Info View Controller-->
+        <scene sceneID="s6l-a7-Mxh">
+            <objects>
+                <viewController storyboardIdentifier="RideInfoViewController" id="c3G-b7-Wug" customClass="RideInfoViewController" customModule="BikeSharing" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1Ys-LI-Qhp">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="900"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Le-9A-DFt">
+                                <rect key="frame" x="0.0" y="44" width="414" height="822"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rlX-Xc-jdM">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="822"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="map" translatesAutoresizingMaskIntoConstraints="NO" id="Fxt-2L-bC9">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="300" id="YsB-PP-zSM"/>
+                                                    <constraint firstAttribute="width" constant="414" id="jQH-CE-VIK"/>
+                                                </constraints>
+                                            </imageView>
+                                            <view contentMode="scaleToFill" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="4LU-Qe-Y4W">
+                                                <rect key="frame" x="0.0" y="292" width="414" height="530"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Дата, Время" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GWw-ej-Gk6">
+                                                        <rect key="frame" x="16" y="16" width="134.5" height="29"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Адрес " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dya-7n-4IC">
+                                                        <rect key="frame" x="16" y="61" width="65.5" height="25.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Адрес" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S2l-RL-s7Y">
+                                                        <rect key="frame" x="16" y="94.5" width="61" height="25.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Всего за поездку" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j19-lu-9ct">
+                                                        <rect key="frame" x="16" y="171.5" width="154.5" height="23"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wB8-Xx-Rki">
+                                                        <rect key="frame" x="62" y="484" width="46" height="30"/>
+                                                        <state key="normal" title="Button"/>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="604-kY-8s5">
+                                                        <rect key="frame" x="275" y="484" width="46" height="30"/>
+                                                        <state key="normal" title="Button"/>
+                                                    </button>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20 мин в пути" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x8B-8A-giw">
+                                                        <rect key="frame" x="16" y="136" width="105.5" height="19.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" name="Background"/>
+                                                <constraints>
+                                                    <constraint firstItem="j19-lu-9ct" firstAttribute="leading" secondItem="GWw-ej-Gk6" secondAttribute="leading" id="15m-xS-HvK"/>
+                                                    <constraint firstItem="Dya-7n-4IC" firstAttribute="top" secondItem="GWw-ej-Gk6" secondAttribute="bottom" constant="16" id="34J-b5-oFk"/>
+                                                    <constraint firstItem="GWw-ej-Gk6" firstAttribute="leading" secondItem="4LU-Qe-Y4W" secondAttribute="leading" constant="16" id="3gR-Fx-Qmm"/>
+                                                    <constraint firstItem="GWw-ej-Gk6" firstAttribute="top" secondItem="4LU-Qe-Y4W" secondAttribute="top" constant="16" id="5fR-If-RIO"/>
+                                                    <constraint firstItem="x8B-8A-giw" firstAttribute="leading" secondItem="GWw-ej-Gk6" secondAttribute="leading" id="6qY-yF-HFw"/>
+                                                    <constraint firstAttribute="bottom" secondItem="wB8-Xx-Rki" secondAttribute="bottom" constant="16" id="H6a-cU-4DU"/>
+                                                    <constraint firstItem="Dya-7n-4IC" firstAttribute="leading" secondItem="GWw-ej-Gk6" secondAttribute="leading" id="JJP-rt-U3h"/>
+                                                    <constraint firstItem="j19-lu-9ct" firstAttribute="top" secondItem="x8B-8A-giw" secondAttribute="bottom" constant="16" id="MfC-fW-JoO"/>
+                                                    <constraint firstItem="S2l-RL-s7Y" firstAttribute="leading" secondItem="Dya-7n-4IC" secondAttribute="leading" id="Xkj-3b-j59"/>
+                                                    <constraint firstAttribute="trailing" secondItem="604-kY-8s5" secondAttribute="trailing" constant="93" id="c5N-Tu-wVF"/>
+                                                    <constraint firstItem="wB8-Xx-Rki" firstAttribute="leading" secondItem="4LU-Qe-Y4W" secondAttribute="leading" constant="62" id="jii-g3-csq"/>
+                                                    <constraint firstItem="604-kY-8s5" firstAttribute="centerY" secondItem="wB8-Xx-Rki" secondAttribute="centerY" id="jnj-zr-GpQ"/>
+                                                    <constraint firstItem="S2l-RL-s7Y" firstAttribute="top" secondItem="Dya-7n-4IC" secondAttribute="bottom" constant="8" id="qW8-E8-fq8"/>
+                                                    <constraint firstItem="wB8-Xx-Rki" firstAttribute="top" relation="greaterThanOrEqual" secondItem="j19-lu-9ct" secondAttribute="bottom" constant="16" id="xJI-9g-7OF"/>
+                                                    <constraint firstItem="x8B-8A-giw" firstAttribute="top" secondItem="S2l-RL-s7Y" secondAttribute="bottom" constant="16" id="zuY-6k-AAY"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="Fxt-2L-bC9" firstAttribute="top" secondItem="rlX-Xc-jdM" secondAttribute="top" id="2Dp-Ln-F9i"/>
+                                            <constraint firstItem="4LU-Qe-Y4W" firstAttribute="top" secondItem="Fxt-2L-bC9" secondAttribute="bottom" constant="-8" id="5vg-EB-N5n"/>
+                                            <constraint firstAttribute="trailing" secondItem="Fxt-2L-bC9" secondAttribute="trailing" id="Gon-IT-8We"/>
+                                            <constraint firstAttribute="bottom" secondItem="4LU-Qe-Y4W" secondAttribute="bottom" id="PgI-Cj-o7e"/>
+                                            <constraint firstAttribute="trailing" secondItem="4LU-Qe-Y4W" secondAttribute="trailing" id="XQb-be-8AE"/>
+                                            <constraint firstItem="4LU-Qe-Y4W" firstAttribute="leading" secondItem="rlX-Xc-jdM" secondAttribute="leading" id="dFf-Xn-uEc"/>
+                                            <constraint firstItem="Fxt-2L-bC9" firstAttribute="leading" secondItem="rlX-Xc-jdM" secondAttribute="leading" id="jel-h9-4Tp"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="rlX-Xc-jdM" secondAttribute="bottom" id="2xR-5e-wAm"/>
+                                    <constraint firstItem="rlX-Xc-jdM" firstAttribute="top" secondItem="4Le-9A-DFt" secondAttribute="top" id="ZDv-P6-hLA"/>
+                                    <constraint firstItem="rlX-Xc-jdM" firstAttribute="leading" secondItem="4Le-9A-DFt" secondAttribute="leading" id="ecC-AA-0co"/>
+                                    <constraint firstAttribute="trailing" secondItem="rlX-Xc-jdM" secondAttribute="trailing" id="tAy-Pe-6Ar"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="rlX-Xc-jdM" firstAttribute="width" secondItem="1Ys-LI-Qhp" secondAttribute="width" id="CZt-JV-g89"/>
+                            <constraint firstItem="rlX-Xc-jdM" firstAttribute="height" secondItem="oMK-Ex-lsR" secondAttribute="height" priority="750" id="LVa-jb-fQs"/>
+                            <constraint firstItem="4Le-9A-DFt" firstAttribute="leading" secondItem="oMK-Ex-lsR" secondAttribute="leading" id="Uo2-lY-3Ad"/>
+                            <constraint firstItem="4Le-9A-DFt" firstAttribute="top" secondItem="oMK-Ex-lsR" secondAttribute="top" id="hmx-8J-ThD"/>
+                            <constraint firstItem="oMK-Ex-lsR" firstAttribute="trailing" secondItem="4Le-9A-DFt" secondAttribute="trailing" id="hnO-jF-5CF"/>
+                            <constraint firstItem="oMK-Ex-lsR" firstAttribute="bottom" secondItem="4Le-9A-DFt" secondAttribute="bottom" id="zVZ-tu-rEp"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="oMK-Ex-lsR"/>
+                    </view>
+                    <size key="freeformSize" width="414" height="900"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kwX-rY-fBy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="543" y="743"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="map" width="353" height="190"/>
+        <namedColor name="Background">
+            <color red="0.30000001192092896" green="0.30000001192092896" blue="0.30000001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
