--- a/BikeSharing/Map/Map.storyboard
+++ b/BikeSharing/Map/Map.storyboard
@@ -160,13 +160,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="u99-VZ-BoG"/>
                     </view>
+                    <navigationItem key="navigationItem" id="sha-l2-QHF"/>
                     <connections>
                         <outlet property="timeLabel" destination="MbL-CV-Z4E" id="W7E-qP-ZiQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yla-O5-duL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="93" y="813"/>
+            <point key="canvasLocation" x="1002.8985507246377" y="812.94642857142856"/>
         </scene>
     </scenes>
     <resources>
