--- a/BikeSharing/Base.lproj/Main.storyboard
+++ b/BikeSharing/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="112" y="-11"/>
+            <point key="canvasLocation" x="-200" y="13"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="2Ty-rb-2kZ">
@@ -137,57 +137,83 @@
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Дата, Время" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GWw-ej-Gk6">
                                                         <rect key="frame" x="16" y="16" width="134.5" height="29"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Адрес " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dya-7n-4IC">
-                                                        <rect key="frame" x="16" y="61" width="65.5" height="25.5"/>
+                                                        <rect key="frame" x="49.5" y="67.5" width="65.5" height="25.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Адрес" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S2l-RL-s7Y">
-                                                        <rect key="frame" x="16" y="94.5" width="61" height="25.5"/>
+                                                        <rect key="frame" x="49.5" y="115.5" width="61" height="25.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Всего за поездку" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j19-lu-9ct">
-                                                        <rect key="frame" x="16" y="171.5" width="154.5" height="23"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Всего за поездку:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j19-lu-9ct">
+                                                        <rect key="frame" x="16" y="192.5" width="159.5" height="23"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wB8-Xx-Rki">
-                                                        <rect key="frame" x="62" y="484" width="46" height="30"/>
-                                                        <state key="normal" title="Button"/>
-                                                    </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="604-kY-8s5">
-                                                        <rect key="frame" x="275" y="484" width="46" height="30"/>
-                                                        <state key="normal" title="Button"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wB8-Xx-Rki" customClass="BSButton" customModule="BikeSharing" customModuleProvider="target">
+                                                        <rect key="frame" x="177" y="484" width="60" height="30"/>
+                                                        <state key="normal" title="Закрыть">
+                                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="close" destination="c3G-b7-Wug" eventType="touchUpInside" id="zze-lu-aIz"/>
+                                                        </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20 мин в пути" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x8B-8A-giw">
-                                                        <rect key="frame" x="16" y="136" width="105.5" height="19.5"/>
+                                                        <rect key="frame" x="16" y="157" width="105.5" height="19.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Стоимость" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vap-tx-ymz">
+                                                        <rect key="frame" x="295" y="193.5" width="87" height="21"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MapMarker" translatesAutoresizingMaskIntoConstraints="NO" id="SEQ-vh-MY5">
+                                                        <rect key="frame" x="16" y="61" width="25.5" height="32"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="SEQ-vh-MY5" secondAttribute="height" multiplier="27:34" id="MeD-qL-j9K"/>
+                                                            <constraint firstAttribute="height" constant="32" id="XC7-ip-FZA"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MapMarker" translatesAutoresizingMaskIntoConstraints="NO" id="kYA-aK-QNL">
+                                                        <rect key="frame" x="16" y="109" width="25.5" height="32"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="32" id="hQh-bz-6oL"/>
+                                                            <constraint firstAttribute="width" secondItem="kYA-aK-QNL" secondAttribute="height" multiplier="27:34" id="j1r-10-y9i"/>
+                                                        </constraints>
+                                                    </imageView>
                                                 </subviews>
                                                 <color key="backgroundColor" name="Background"/>
                                                 <constraints>
                                                     <constraint firstItem="j19-lu-9ct" firstAttribute="leading" secondItem="GWw-ej-Gk6" secondAttribute="leading" id="15m-xS-HvK"/>
-                                                    <constraint firstItem="Dya-7n-4IC" firstAttribute="top" secondItem="GWw-ej-Gk6" secondAttribute="bottom" constant="16" id="34J-b5-oFk"/>
                                                     <constraint firstItem="GWw-ej-Gk6" firstAttribute="leading" secondItem="4LU-Qe-Y4W" secondAttribute="leading" constant="16" id="3gR-Fx-Qmm"/>
                                                     <constraint firstItem="GWw-ej-Gk6" firstAttribute="top" secondItem="4LU-Qe-Y4W" secondAttribute="top" constant="16" id="5fR-If-RIO"/>
+                                                    <constraint firstItem="kYA-aK-QNL" firstAttribute="top" secondItem="SEQ-vh-MY5" secondAttribute="bottom" constant="16" id="6jN-0x-GHz"/>
                                                     <constraint firstItem="x8B-8A-giw" firstAttribute="leading" secondItem="GWw-ej-Gk6" secondAttribute="leading" id="6qY-yF-HFw"/>
+                                                    <constraint firstItem="kYA-aK-QNL" firstAttribute="width" secondItem="kYA-aK-QNL" secondAttribute="height" multiplier="27:34" id="70X-g8-pCG"/>
+                                                    <constraint firstAttribute="trailing" secondItem="Vap-tx-ymz" secondAttribute="trailing" constant="32" id="9dH-eJ-w6g"/>
+                                                    <constraint firstItem="wB8-Xx-Rki" firstAttribute="centerX" secondItem="4LU-Qe-Y4W" secondAttribute="centerX" id="E31-UA-52u"/>
                                                     <constraint firstAttribute="bottom" secondItem="wB8-Xx-Rki" secondAttribute="bottom" constant="16" id="H6a-cU-4DU"/>
-                                                    <constraint firstItem="Dya-7n-4IC" firstAttribute="leading" secondItem="GWw-ej-Gk6" secondAttribute="leading" id="JJP-rt-U3h"/>
+                                                    <constraint firstItem="Dya-7n-4IC" firstAttribute="leading" secondItem="SEQ-vh-MY5" secondAttribute="trailing" constant="8" id="Hye-CY-7RM"/>
+                                                    <constraint firstItem="S2l-RL-s7Y" firstAttribute="leading" secondItem="kYA-aK-QNL" secondAttribute="trailing" constant="8" id="IA6-pr-pmg"/>
+                                                    <constraint firstItem="SEQ-vh-MY5" firstAttribute="leading" secondItem="GWw-ej-Gk6" secondAttribute="leading" id="JBU-S6-82t"/>
+                                                    <constraint firstItem="Vap-tx-ymz" firstAttribute="centerY" secondItem="j19-lu-9ct" secondAttribute="centerY" id="JJg-z9-KZk"/>
                                                     <constraint firstItem="j19-lu-9ct" firstAttribute="top" secondItem="x8B-8A-giw" secondAttribute="bottom" constant="16" id="MfC-fW-JoO"/>
-                                                    <constraint firstItem="S2l-RL-s7Y" firstAttribute="leading" secondItem="Dya-7n-4IC" secondAttribute="leading" id="Xkj-3b-j59"/>
-                                                    <constraint firstAttribute="trailing" secondItem="604-kY-8s5" secondAttribute="trailing" constant="93" id="c5N-Tu-wVF"/>
-                                                    <constraint firstItem="wB8-Xx-Rki" firstAttribute="leading" secondItem="4LU-Qe-Y4W" secondAttribute="leading" constant="62" id="jii-g3-csq"/>
-                                                    <constraint firstItem="604-kY-8s5" firstAttribute="centerY" secondItem="wB8-Xx-Rki" secondAttribute="centerY" id="jnj-zr-GpQ"/>
-                                                    <constraint firstItem="S2l-RL-s7Y" firstAttribute="top" secondItem="Dya-7n-4IC" secondAttribute="bottom" constant="8" id="qW8-E8-fq8"/>
+                                                    <constraint firstItem="kYA-aK-QNL" firstAttribute="leading" secondItem="SEQ-vh-MY5" secondAttribute="leading" id="OT1-kn-ZOc"/>
+                                                    <constraint firstItem="Dya-7n-4IC" firstAttribute="bottom" secondItem="SEQ-vh-MY5" secondAttribute="bottom" id="TMl-Lh-ZYS"/>
+                                                    <constraint firstItem="SEQ-vh-MY5" firstAttribute="top" secondItem="GWw-ej-Gk6" secondAttribute="bottom" constant="16" id="icO-ff-dK5"/>
+                                                    <constraint firstItem="S2l-RL-s7Y" firstAttribute="bottom" secondItem="kYA-aK-QNL" secondAttribute="bottom" id="wTa-Us-oJk"/>
                                                     <constraint firstItem="wB8-Xx-Rki" firstAttribute="top" relation="greaterThanOrEqual" secondItem="j19-lu-9ct" secondAttribute="bottom" constant="16" id="xJI-9g-7OF"/>
                                                     <constraint firstItem="x8B-8A-giw" firstAttribute="top" secondItem="S2l-RL-s7Y" secondAttribute="bottom" constant="16" id="zuY-6k-AAY"/>
                                                 </constraints>
@@ -225,13 +251,23 @@
                         <viewLayoutGuide key="safeArea" id="oMK-Ex-lsR"/>
                     </view>
                     <size key="freeformSize" width="414" height="900"/>
+                    <connections>
+                        <outlet property="backgroundView" destination="4LU-Qe-Y4W" id="oQG-c7-zgP"/>
+                        <outlet property="bottomButton" destination="wB8-Xx-Rki" id="b1X-fx-Rx8"/>
+                        <outlet property="costLabel" destination="Vap-tx-ymz" id="EnC-lb-5rn"/>
+                        <outlet property="dateTimeLabel" destination="GWw-ej-Gk6" id="1qy-Wx-2FE"/>
+                        <outlet property="endLabel" destination="S2l-RL-s7Y" id="bkJ-Hi-Vo6"/>
+                        <outlet property="startLabel" destination="Dya-7n-4IC" id="Gst-X5-IYS"/>
+                        <outlet property="timeLabel" destination="x8B-8A-giw" id="YND-Ne-wTs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kwX-rY-fBy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="543" y="743"/>
+            <point key="canvasLocation" x="540.57971014492762" y="742.63392857142856"/>
         </scene>
     </scenes>
     <resources>
+        <image name="MapMarker" width="24" height="41"/>
         <image name="map" width="353" height="190"/>
         <namedColor name="Background">
             <color red="0.30000001192092896" green="0.30000001192092896" blue="0.30000001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
